--- a/ui5-mock.yaml
+++ b/ui5-mock.yaml
@@ -22,29 +22,37 @@ server:
         ignoreCertErrors: false
         backend:
           - path: /sap/opu/odata4/sap/api_purchaseorder_2
-            url: https://my424374.s4hana.cloud.sap
-            destination: BTPTOS4HC_GR
+            url: https://my430117.s4hana.cloud.sap
+            destination: BTPTOS4HC_DEV
           - path: /sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV
-            url: https://my424374.s4hana.cloud.sap
-            destination: BTPTOS4HC_GR
+            url: https://my430117.s4hana.cloud.sap
+            destination: BTPTOS4HC_DEV
           - path: /sap/opu/odata/sap/API_PRODUCTION_ORDER_2_SRV
-            url: https://my424374.s4hana.cloud.sap
-            destination: BTPTOS4HC_GR
+            url: https://my430117.s4hana.cloud.sap
+            destination: BTPTOS4HC_DEV
           - path: /sap/opu/odata/sap/API_INBOUND_DELIVERY_SRV;v=0002
-            url: https://my424374.s4hana.cloud.sap
-            destination: BTPTOS4HC_GR
+            url: https://my430117.s4hana.cloud.sap
+            destination: BTPTOS4HC_DEV
           - path: /sap/opu/odata4/sap/api_handlingunit/srvd_a2x/sap/handlingunit/0001/
-            url: https://my424374.s4hana.cloud.sap
-            destination: BTPTOS4HC_GR
+            url: https://my430117.s4hana.cloud.sap
+            destination: BTPTOS4HC_DEV
           - path: /sap/opu/odata4/sap/api_whse_inb_delivery_2/srvd_a2x/sap/warehouseinbounddelivery/0001/
-            url: https://my424374.s4hana.cloud.sap
-            destination: BTPTOS4HC_GR
+            url: https://my430117.s4hana.cloud.sap
+            destination: BTPTOS4HC_DEV
           - path: /http
             destination: CPI_HU_LABEL
-          - url: https://my424374.s4hana.cloud.sap
+          - url: https://my430117.s4hana.cloud.sap
             authenticationType: BasicAuthentication
-            destination: BTPTOS4HC_GR
+            destination: BTPTOS4HC_DEV
             path: /sap
+          - url: https://my424374-api.s4hana.cloud.sap
+            authenticationType: SAMLAssertion
+            destination: BTP_S4_BAS_Starter
+            path: /sap/opu/odata/sap/YY1_hu_label_cds/
+          - url: https://my430117.s4hana.cloud.sap
+            authenticationType: BasicAuthentication
+            destination: BTPTOS4HC_DEV
+            path: /sap/opu/odata/sap/YY1_DEF_PRINTER_LAYOUT_cds/
 
     # 2) LIVE reload
     - name: fiori-tools-appreload
@@ -58,10 +66,6 @@ server:
       configuration:
         mountPath: /
         services:
-          - urlPath: /http/Bartender/Order
-            metadataPath: ./webapp/localService/mainservice/metadata.xml
-            mockdataPath: ./webapp/localService/mainservice/data
-            generateMockData: true
           - urlPath: /sap/opu/odata4/sap/api_purchaseorder_2/srvd_a2x/sap/purchaseorder/0001
             metadataPath: ./webapp/localService/purchaseOrderService/metadata.xml
             mockdataPath: ./webapp/localService/purchaseOrderService/data
@@ -78,12 +82,22 @@ server:
             metadataPath: ./webapp/localService/whseGoodsReceiptService/metadata.xml
             mockdataPath: ./webapp/localService/whseGoodsReceiptService/data
             generateMockData: true
+          - urlPath: /sap/opu/odata/sap/API_INBOUND_DELIVERY_SRV;v=0002
+            metadataPath: ./webapp/localService/inboundDeliveryService/metadata.xml
+            mockdataPath: ./webapp/localService/inboundDeliveryService/data
+            generateMockData: true
           - urlPath: /sap/opu/odata4/sap/api_handlingunit/srvd_a2x/sap/handlingunit/0001
             metadataPath: ./webapp/localService/handlingUnitService/metadata.xml
             mockdataPath: ./webapp/localService/handlingUnitService/data
             generateMockData: true
-          - urlPath: /sap/opu/odata/sap/API_INBOUND_DELIVERY_SRV;v=0002
-            metadataPath: ./webapp/localService/sap/metadata.xml
-            mockdataPath: ./webapp/localService/sap/data
+          - urlPath: /sap/opu/odata/sap/YY1_hu_label_cds
+            metadataPath: ./webapp/localService/YY1_hu_label_cds/metadata.xml
+            mockdataPath: ./webapp/localService/YY1_hu_label_cds/data
             generateMockData: true
-        annotations: []
+          - urlPath: /sap/opu/odata/sap/YY1_DEF_PRINTER_LAYOUT_cds
+            metadataPath: ./webapp/localService/YY1_DEF_PRINTER_LAYOUT_cds/metadata.xml
+            mockdataPath: ./webapp/localService/YY1_DEF_PRINTER_LAYOUT_cds/data
+            generateMockData: true
+        annotations:
+          - localPath: ./webapp/localService/YY1_hu_label_cds/YY1_HU_LABEL_CDS_VAN.xml
+            urlPath: /sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='YY1_HU_LABEL_CDS_VAN',Version='0001')/$value/
