--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -16,7 +16,6 @@
       "toolsId": "d70dc40a-0597-420b-ad76-d453cb6f09bc"
     },
     "dataSources": {
-   
       "purchaseOrderService": {
         "uri": "/sap/opu/odata4/sap/api_purchaseorder_2/srvd_a2x/sap/purchaseorder/0001/",
         "type": "OData",
@@ -70,7 +69,35 @@
           "localUri": "localService/handlingUnitService/metadata.xml",
           "odataVersion": "4.0"
         }
+      },
+      "YY1_HU_LABEL_CDS_VAN": {
+        "uri": "/sap/opu/odata/IWFND/CATALOGSERVICE;v=2/Annotations(TechnicalName='YY1_HU_LABEL_CDS_VAN',Version='0001')/$value/",
+        "type": "ODataAnnotation",
+        "settings": {
+          "localUri": "localService/YY1_hu_label_cds/YY1_HU_LABEL_CDS_VAN.xml"
+        }
+      },
+      "YY1_hu_label_cds": {
+        "uri": "/sap/opu/odata/sap/YY1_hu_label_cds/",
+        "type": "OData",
+        "settings": {
+          "annotations": [
+            "YY1_HU_LABEL_CDS_VAN"
+          ],
+          "localUri": "localService/YY1_hu_label_cds/metadata.xml",
+          "odataVersion": "2.0"
+        }
+      },  
+
+       "printerLayoutService": {
+        "uri": "/sap/opu/odata/sap/YY1_DEF_PRINTER_LAYOUT_cds/",
+        "type": "OData",
+        "settings": {
+          "annotations": [],
+          "odataVersion": "2.0"
+        }
       }
+    
     }
   },
   "sap.ui": {
@@ -109,7 +136,6 @@
           "bundleName": "inboundlabel.i18n.i18n"
         }
       },
-     
       "poService": {
         "type": "sap.ui.model.odata.v4.ODataModel",
         "dataSource": "purchaseOrderService",
@@ -162,7 +188,6 @@
           "updateGroupId": "$direct"
         }
       },
-     
       "handlingUnitService": {
         "dataSource": "handlingUnitService",
         "preload": true,
@@ -199,7 +224,21 @@
         "dataSource": "production_order_v2",
         "preload": true,
         "settings": {}
-      }
+      },
+      "YY1_hu_label_cds": {
+        "dataSource": "YY1_hu_label_cds",
+        "preload": true,
+        "settings": {}
+      },
+      "printerLayout": {
+  "type": "sap.ui.model.odata.v2.ODataModel",
+  "dataSource": "printerLayoutService",
+  "preload": true,
+  "settings": {
+    "defaultOperationMode": "Server",
+    "useBatch": false
+  }
+}
     },
     "resources": {
       "css": [
@@ -248,4 +287,3 @@
     "service": "inboundlabel"
   }
 }
-
