--- a/ui5-mock.yaml
+++ b/ui5-mock.yaml
@@ -22,37 +22,41 @@ server:
         ignoreCertErrors: false
         backend:
           - path: /sap/opu/odata4/sap/api_purchaseorder_2
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata/sap/API_PRODUCTION_ORDER_2_SRV
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata/sap/API_INBOUND_DELIVERY_SRV;v=0002
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata4/sap/api_handlingunit/srvd_a2x/sap/handlingunit/0001/
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata4/sap/api_whse_inb_delivery_2/srvd_a2x/sap/warehouseinbounddelivery/0001/
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /http
-            destination: CPI_HU_LABEL
-          - url: https://my430117.s4hana.cloud.sap
+            destination: INBOUND_LABEL_CPI
+          - url: https://my430184.s4hana.cloud.sap
             authenticationType: BasicAuthentication
-            destination: BTPTOS4HC_DEV 
+            destination: INBOUND_LABEL
             path: /sap
           - url: https://my424374-api.s4hana.cloud.sap
             authenticationType: SAMLAssertion
             destination: BTP_S4_BAS_Starter
             path: /sap/opu/odata/sap/YY1_hu_label_cds/
-          - url: https://my430117.s4hana.cloud.sap
+          - url: https://my430184.s4hana.cloud.sap
             authenticationType: BasicAuthentication
-            destination: BTPTOS4HC_DEV 
+            destination: INBOUND_LABEL
             path: /sap/opu/odata/sap/YY1_DEF_PRINTER_LAYOUT_cds/
+          - url: https://my430184.s4hana.cloud.sap
+            authenticationType: BasicAuthentication
+            destination: INBOUND_LABEL
+            path: /sap/opu/odata/sap/API_PRODUCT_SRV/
 
     # 2) LIVE reload
     - name: fiori-tools-appreload
@@ -97,6 +101,10 @@ server:
           - urlPath: /sap/opu/odata/sap/YY1_DEF_PRINTER_LAYOUT_cds
             metadataPath: ./webapp/localService/YY1_DEF_PRINTER_LAYOUT_cds/metadata.xml
             mockdataPath: ./webapp/localService/YY1_DEF_PRINTER_LAYOUT_cds/data
+            generateMockData: true
+          - urlPath: /sap/opu/odata/sap/API_PRODUCT_SRV
+            metadataPath: ./webapp/localService/API_PRODUCT_SRV/metadata.xml
+            mockdataPath: ./webapp/localService/API_PRODUCT_SRV/data
             generateMockData: true
         annotations:
           - localPath: ./webapp/localService/YY1_hu_label_cds/YY1_HU_LABEL_CDS_VAN.xml
