--- a/ui5.yaml
+++ b/ui5.yaml
@@ -22,41 +22,38 @@ server:
         ignoreCertErrors: false
         backend:
           - path: /sap/opu/odata4/sap/api_purchaseorder_2
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata/sap/API_MATERIAL_DOCUMENT_SRV
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata/sap/API_PRODUCTION_ORDER_2_SRV
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
 
-            
           - path: /sap/opu/odata/sap/API_INBOUND_DELIVERY_SRV;v=0002
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata4/sap/api_handlingunit/srvd_a2x/sap/handlingunit/0001/
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
           - path: /sap/opu/odata4/sap/api_whse_inb_delivery_2/srvd_a2x/sap/warehouseinbounddelivery/0001/
-            url: https://my430117.s4hana.cloud.sap
-            destination: BTPTOS4HC_DEV 
-          - path: /http
-            destination: CPI_HU_LABEL
-          - url: https://my430117.s4hana.cloud.sap
-            authenticationType: BasicAuthentication
-            destination: BTPTOS4HC_DEV 
-            path: /sap
-          - url: https://my430117-api.s4hana.cloud.sap
-            authenticationType: SAMLAssertion
-            destination: BTP_S4_BAS_Starter
-            path: /sap/opu/odata/sap/YY1_hu_label_cds/
-          - url: https://my430134-api.s4hana.cloud.sap
-            authenticationType: SAMLAssertion
-            destination: BTP_S4_BAS_DEV
-            path: /sap/opu/odata/sap/YY1_DEF_PRINTER_LAYOUT_cds/
-
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
             
+          - path: /sap/opu/odata/sap/API_PRODUCT_SRV/
+            url: https://my430184.s4hana.cloud.sap
+            destination: INBOUND_LABEL
+
+          - path: /http
+            destination: INBOUND_LABEL_CPI
+            
+          - url: https://my430184.s4hana.cloud.sap
+            authenticationType: BasicAuthentication
+            destination: INBOUND_LABEL
+            path: /sap
+          
+       
 
     # 2) LIVE reload
     - name: fiori-tools-appreload
@@ -65,3 +62,4 @@ server:
         port: 35729
         path: webapp
         delay: 300
+
